--- a/src/main.css
+++ b/src/main.css
@@ -1,10 +1,11 @@
 html {
   height: 100%;
+  margin: auto;
   text-rendering: optimizeLegibility;
 }
 
 body {
-  padding: 0.5rem;
+  margin: auto;
   text-rendering: optimizeLegibility;
 }
 
@@ -13,6 +14,29 @@ table {
   align: center;
   width: 100%;
   height: 100%;
+  table-layout: fixed;
+  margin: 0px;
+}
+
+th {
+  font-family: Arial;
+  text-align: center;
+  font-size: 2vh;
+  font-weight: lighter;
+  background: #B8C9FE;
+}
+
+th, td {
+  font-family: Arial;
+  text-align: center;
+  font-size: 2vh;
+  font-weight: lighter;
+  padding: 1%;
+}
+
+
+th img, td img {
+  height: 5vh;
 }
 
 h2, legend {
@@ -27,27 +51,6 @@ legend {
 	text-shadow: 4px 4px 3px rgba(150, 150, 150, 1);
 }
 
-td, th {
-  width: 10%;
-  padding: 2px;
-  font-family: Arial;
-  text-align: center;
-  padding: 2px;
-  font-size: 2vh;
-  color:#030303;
-}
-
-tr th img {
-  width: 4vh;
-  height: 4vh;
-}
-
-th {
-  background: #B8C9FE;
-  border-color: white;
-  font-weight: lighter;
-}
-
 fieldset {
   border: 1px solid white;
   border-radius: 8px;
@@ -59,6 +62,8 @@ h3 {
   font-family: Arial;
   font-size: 2vh;
   text-align: center;
+  padding: 2vh;
+  margin: auto;
 }
 
 h4 {
@@ -69,14 +74,11 @@ h4 {
 
 span {
   font-family: Arial;
-  font-align: center;
-  font-size: 15vh;
-}
-
-h5 span{
-  font-family: Arial;
-  font-size: 4vh;
   text-align: center;
+  font-size: 12vh;
+  padding-bottom: 0px;
+  margin-bottom: 200px;
+  border: 1px solid black;
 }
 
 /*span e h5 reservados para o indice uv*/
@@ -216,8 +218,8 @@ aviso {
   text-align: center;
   display: block;
   position: absolute;
-  padding: 2px;
-  margin: 2px 2px;
+  padding: 0px;
+  margin: 0px 0px;
   width: 20%;
 }
 
@@ -225,23 +227,23 @@ aviso {
   text-align: center;
   display: block;
   position: absolute;
-  padding: 2px;
-  margin: 2px 2px;
+  padding: 0px;
+  margin: 0px 0px;
   width: 50%;
 }
 
 .box-1 {
-  top: 16vh;
+  top: 17.5%;
   left: 3%;
 }
 
 .box-2 {
-  top: 45vh;
+  top: 50%;
   left: 3%;
 }
 
 .box-3 {
-  top: 80vh;
+  top: 80%;
   left: 3%;
 }
 
@@ -256,12 +258,12 @@ aviso {
 }
 
 .box-6 {
-  top: 72vh;
+  top: 75%;
   right: 3%;
 }
 
 .box-7 {
-  top: 50vh;
+  bottom: 2.5%;
   right: 25%;
 }
 
@@ -276,8 +278,8 @@ aviso {
   width: 50%;
   left: 25%;
   padding: 1px;
-   border-radius: 100px;
- background: radial-gradient(circle, #fb0404, #f92f04, #f84306, #f6520c, #f45f13);
+  border-radius: 100px;
+  background: radial-gradient(circle, #fb0404, #f92f04, #f84306, #f6520c, #f45f13);
  /* background: radial-gradient(circle, #eb1212, #f0410b, #f55e07, #f8750a, #fb8b15);  */
  }
 
@@ -310,6 +312,21 @@ text-shadow:     0 1px 0 hsl(174,5%,80%),
   left: 25%;
   padding: 0.5px;
   border-radius: 8px;
+}
+
+.uv-index-number {
+  font-family: Arial;
+  font-size: 15vh;
+  text-align: center;
+  padding: 5px;
+}
+
+.uv-index-level {
+  font-family: Arial;
+  font-size: 4vh;
+  text-align: center;
+  padding: 5px;
+  font-weight: bold;
 }
 
 .uv-index-1{
@@ -364,7 +381,8 @@ text-shadow:     0 1px 0 hsl(174,5%,80%),
   position: relative;
   width: 100%;
   height: 25%;
-  padding: 0.1vw;
+  padding: 0px;
+  margin: 0px 0px;
 }
 
 .weather-two {
