--- a/src/main.css
+++ b/src/main.css
@@ -366,3 +366,9 @@ text-shadow:     0 1px 0 hsl(174,5%,80%),
   padding: 0.5%;
   border-radius: 12px;
 }
+
+.loading-image {
+  height: 20%;
+  position: relative;
+  left: 25%;
+}
